# inventory-heat-issue

./: .gitignore  InventoryIssueKeystore  build.gradle  settings.gradle
app/: build.gradle  google-services.json  itekRetail.jks  proguard-rules.pro
app/libs/: LeadDevice.aar  chainway_sdk_ver20250912_release.aar  honeywell_rfid_sdk_v2.23.aar  zebra_sdk_9.9.2.116.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: checkHardwareAppVersion.json  checkTripNumberExists.json  completeBatchIdForStoreOutward.json  getActiveUserCount.json  getAgeingList.json  getAgeingListDetails.json  getBatchIdForStoreOutward.json  getBrandInventoryFilters.json  getBrands.json  getCategories.json  getChallanDetail.json  getDecodeTypes.json  getDestinationsAndOutwardTypeList.json  getEansByInventoryFilters.json  getEncodingAchievements.json  getEncodingDashboard.json  getEpcForEncode.json  getExcelBasedSearchList.json  getFIFOList.json  getFileSearchList.json  getIOConfiguration.json  getInventoryDashboard.json  getInventoryDashboard_new.json  getInventoryDashboard_new2.json  getInventoryFilters.json  getInwardDashboard.json  getInwardHuData.json  getInwardTripData.json  getMappedEan.json  getOffRangeProducts.json  getOmnichannelAchievements.json  getOmnichannelDashboard.json  (+57 more)
app/src/main/java/com/itek/retail/cpp/: CMakeLists.txt  itek_nstd.c  itek_sgtin96.c  itek_tatagid.c  main.c  native-lib.c
app/src/main/java/com/itek/retail/cpp/include/: itek_common.h  itek_nstd.h  itek_sgtin96.h  itek_tatagid.h  main.h
docs/: retail-inventory-heating-code-review.md
(+951 files in other folders)
